      (Martin Pool) (NB: TestSkipped should only be raised for correctable
      reasons - see the wiki spec ImprovingBzrTestSuite).

    * Test sftp with relative, absolute-in-homedir and absolute-not-in-homedir
      paths for the transport tests. Introduce blackbox remote sftp tests that
      test the same permutations. (Robert Collins, Robey Pointer)

  INTERNALS:

    * WorkingTree.pull has been split across Branch and WorkingTree,
      to allow Branch only pulls. (Robert Collins)

    * commands.display_command now returns the result of the decorated 
      function. (Robert Collins)

    * LocationConfig now has a set_user_option(key, value) call to save
      a setting in its matching location section (a new one is created
      if needed). (Robert Collins)

    * Branch has two new methods, get_push_location and set_push_location
      to respectively, get and set the push location. (Robert Collins)

    * commands.register_command now takes an optional flag to signal that
      the registrant is planning to decorate an existing command. When 
      given multiple plugins registering a command is not an error, and
      the original command class (whether built in or a plugin based one) is
      returned to the caller. There is a new error 'MustUseDecorated' for
      signalling when a wrapping command should switch to the original
      version. (Robert Collins)

    * Some option parsing errors will raise 'BzrOptionError', allowing 
      granular detection for decorating commands. (Robert Collins).

    * Branch.read_working_inventory has moved to
      WorkingTree.read_working_inventory. This necessitated changes to
      Branch.get_root_id, and a move of Branch.set_inventory to WorkingTree
      as well. To make it clear that a WorkingTree cannot always be obtained
      Branch.working_tree() will raise 'errors.NoWorkingTree' if one cannot
      be obtained. (Robert Collins)

    * All pending merges operations from Branch are now on WorkingTree.