@@ -194,6 +194,17 @@ UNRELEASED CHANGES
       paths for the transport tests. Introduce blackbox remote sftp tests that
       test the same permutations. (Robert Collins, Robey Pointer)
 
+    * Transport implementation tests are now independent of the local file
+      system, which allows tests for esoteric transports, and for features
+      not available in the local file system. They also repeat for variations
+      on the URL scheme that can introduce issues in the transport code,
+      see bzrlib.transport.TransportTestProviderAdapter() for this.
+      (Robert Collins).
+
+    * TestCase.build_tree uses the transport interface to build trees, pass
+      in a transport parameter to give it an existing connection.
+      (Robert Collins).
+
   INTERNALS:
 
     * WorkingTree.pull has been split across Branch and WorkingTree,
